# nsew-sales-visit-log

./: MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
nsew_sales_visit_log/: hooks.py  modules.txt
nsew_sales_visit_log/nsew_sales_visit_log/doctype/sales_visit_log/: sales_visit_log.json  sales_visit_log.py
nsew_sales_visit_log/public/js/: sales_visit_log.js
