[project]
name = "nsew_sales_visit_log"
authors = [
    { name = "Nexgen ERP Technologies"}
]
description = "Sales Visit Log Custom App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # optionally add frappe version
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
"Homepage" = "https://github.com/nexgenerptechnologies/nsew-sales-visit-log"
